--- a/index.html
+++ b/index.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+
+    <!--import bootstrap css  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        .typing-text {
+            font-weight: bold;
+            font-size: 1.3rem;
+            white-space: nowrap;
+            overflow: hidden;
+            border-right: 2px solid orange;
+            /* cursor effect */
+            width: 0;
+            animation: typing 3s steps(18) infinite alternate, blink 0.7s infinite;
+        }
+
+        @keyframes typing {
+            from {
+                width: 0;
+            }
+
+            to {
+                width: 19ch;
+            }
+
+            
+        }
+
+        @keyframes blink {
+            50% {
+                border-color: transparent;
+            }
+        }
+    </style>
+
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+            <div class="container">
+                <!-- Brand / Logo -->
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="assets/skillcraft_logo.png" alt="Skill Craft Tech Logo" width="40" height="40"
+                        class="me-2">
+                    <span class="typing-text">SkillCraft Technology</span>
+                </a>
+
+
+                <!-- Toggler for small screens -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Navbar links -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="btn btn-outline-light me-2" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-light me-2" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-light me-2" href="services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-light me-2" href="contactUs.html">Contact</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
+    <!-- import bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
